---
source: book/tests/snapshot.rs
expression: "from employees\nderive [first_name, dept_id]\njoin d=departments [==dept_id]\nselect [first_name, d.title]\n"
---
from employees
derive [
  first_name,
  dept_id,
]
join d = departments [==dept_id]
select [
  first_name,
  d.title,
]



